# PaTS

./: .gitignore  README.md  local-pats.sh  output.md  pats-benchmark.sh  pats.sh  pyproject.toml  submit_all_runs.sh  ttm_getting_started.ipynb  ttm_getting_started.py
archive/: scripts.generator.ipynb  scripts.ttm.ipynb
benchmark_outputs/: benchmark_results_lstm_pats_lstm_model_N4_N4.json
blocksworld/data/: analyze_dataset_splits.py  generate_dataset.sh  parse_and_encode.py
blocksworld/data_analyzed/: analyze_dataset_splits.py  test_files.txt  train_files.txt  val_files.txt
blocksworld/data_original/: analyze_dataset.py  check_duplicates.ipynb
blocksworld/encodings/: TS-Planning-Discussion-1.docx  TS-Planning-Discussion-2.docx
blocksworld/scripts/: BlocksWorld.py  BlocksWorldValidator.py  README.md  generate_plans.py  generator.ipynb  lstm.py  ttm.ipynb  ttm_trainer.py
data/: README.md  analyze_dataset_splits.py  check_dataset_uniqueness.py  generate_dataset.sh  generate_dataset.slurm  generate_dataset_2.slurm  generate_dataset_bw.slurm  generate_dataset_gr.slurm  get_problem_hash.py  parse_and_encode.py  parse_and_encode_bw.py  parse_and_encode_gr.py
scripts/: BlocksWorldValidator.py  GrippersValidator.py  PlannableModel.py  README.md  benchmark.py  generate_plans.py  pats_dataset.py  pats_graph_dataset.py  train_model.py  ttm_getting_started.ipynb  ttm_getting_started.py
scripts/models/: README.md  gnn.py  helpers.py  llama.py  lstm.py  plansformer.py  ttm.py  xgboost.py
