[project]
name = "PaTS"
version = "0.1.0"
description = "Planning as Time-Series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.1.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "pddlpy>=0.4.4",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
# Might need to run `uv pip install "granite-tsfm[notebooks] @ git+https://github.com/ibm-granite/granite-tsfm.git@v0.2.22"`

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
