[project]
dependencies = [
  "hf-xet>=1.1.2",
  "loguru>=0.7.3",
  "numpy==2.2.1",
  "pddlpy>=0.4.4",
  "torch==2.2.1; sys_platform == 'darwin'",
]
description = "Planning as Time-Series"
name = "PaTS"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
# Might need to run `uv pip install "granite-tsfm[notebooks] @ git+https://github.com/ibm-granite/granite-tsfm.git@v0.2.22"`

[dependency-groups]
dev = [
  "ruff>=0.11.10",
]

[tool.ruff]
line-length = 124

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
