[project]
dependencies = [
  "accelerate>=1.10.0",
  "fastdtw>=0.3.4",
  "hf-xet>=1.1.2",
  "loguru>=0.7.3",
  "matplotlib>=3.10.3",
  "numpy==2.2.1",
  "pandas>=2.3.0",
  "pddlpy>=0.4.4",
  "peft>=0.17.1",
  "pyyaml>=6.0.2",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
  "tensorboard>=2.19.0",
  "torch>=2.7.0; sys_platform == 'darwin'",
  "transformers>=4.52.4",
  "xgboost>=3.0.3",
]
description = "Planning as Time-Series"
name = "PaTS"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.setuptools]
py-modules = []

# Steps:
# 1. `conda activate pats-env`
# 2. `pip install -e .`: Install manually install to env (conda, etc.) with pip.
# 3. `pip install "granite-tsfm[notebooks] @ git+https://github.com/ibm-granite/granite-tsfm.git@v0.2.22"`
# 4. `conda deactivate`

[dependency-groups]
dev = [
  "ruff>=0.11.10",
]

[tool.ruff]
line-length = 124

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
